modificações e restruturando projeto.